--- a/Solution/Q3.md
+++ b/Solution/Q3.md
@@ -1,1 +1,44 @@
 
+# Problem Statement:
+## Evolution of E-commerce orders in the Brazil region::
+- ### Get the month on month no. of orders placed in each state.
+```sql
+select c.customer_state, extract(month from o.order_purchase_timestamp) as
+month,count(distinct order_id) as order_count
+from target_SQL.customers c
+join target_SQL.orders o
+on c.customer_id=o.customer_id
+group by c.customer_state,month
+order by order_count desc
+```
+
+- ### How are the customers distributed across all the states?
+
+ ```sql
+select customer_state, count(customer_id) as customer_count
+from target_SQL.customers
+group by customer_state
+order by customer_count desc
+```
+
+
+  
+
+---
+## Creator
+
+This project was created by [Vishwas Joshi](https://github.com/vishwasjoshi2019).
+
+
+
+<h3 align="left">Connect with me:</h3>
+<p align="left">
+<a href="https://twitter.com/vishwas79116150" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" alt="vishwas79116150" height="30" width="40" /></a>
+<a href="https://linkedin.com/in/https://www.linkedin.com/in/vishwasjoshi2019/" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" alt="https://www.linkedin.com/in/vishwasjoshi2019/" height="30" width="40" /></a>
+<a href="https://instagram.com/cursed_geek" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/instagram.svg" alt="cursed_geek" height="30" width="40" /></a>
+<a href="https://www.leetcode.com/cursed_geek" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/leet-code.svg" alt="cursed_geek" height="30" width="40" /></a>
+<a href="https://auth.geeksforgeeks.org/user/https://auth.geeksforgeeks.org/user/vishwasjoshi2019/" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/geeks-for-geeks.svg" alt="https://auth.geeksforgeeks.org/user/vishwasjoshi2019/" height="30" width="40" /></a>
+  
+[![Gmail](https://img.shields.io/badge/Gmail-vishwasjoshi2019%40gmail.com-red)](mailto:vishwasjoshi2019@gmail.com)
+[![Institute Email](https://img.shields.io/badge/Institute%20Email-vishwas.j%40iitgn.ac.in-red)](mailto:vishwas.j@iitgn.ac.in)
+</p>
