--- a/Solution/Q2.md
+++ b/Solution/Q2.md
@@ -1,14 +1,14 @@
 
 # Problem Statement:
 ## In-depth Exploration:
-- # Is there a growing trend in the no. of orders placed over the past years?
+- ### Is there a growing trend in the no. of orders placed over the past years?
 ```sql
    select extract(year from order_purchase_timestamp)as year, count(order_id)
   from `target_SQL.orders`
   group by (year) order by year;
 ```
 
-- # Can we see some kind of monthly seasonality in terms of the no. of orders being placed?
+- ### Can we see some kind of monthly seasonality in terms of the no. of orders being placed?
 
  ```sql
 select month,
@@ -19,7 +19,7 @@ from target_SQL.orders group by month )
 group by month
 order by avg_order_count desc
 ```
-- # During what time of the day, do the Brazilian customers mostly place their orders? (Dawn, Morning, Afternoon or Night)
+- ### During what time of the day, do the Brazilian customers mostly place their orders? (Dawn, Morning, Afternoon or Night)
   - 0-6 hrs : Dawn
   - 7-12 hrs : Mornings
   - 13-18 hrs : Afternoon
